--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,5 +69,9 @@
         app:layout_constraintEnd_toEndOf="@id/et_username"
         app:layout_constraintStart_toStartOf="@id/et_username"
         app:layout_constraintTop_toBottomOf="@id/et_password" />
-
+<WebView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    app:layout_constraintTop_toBottomOf="@id/b_login"
+    android:id="@+id/webView"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
