--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -14,67 +13,78 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.30" />
 
+    <TextView
+        android:id="@+id/tv_username"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/_40sdp"
+        android:text="@string/user_name"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/guideline" />
+
     <EditText
         android:id="@+id/et_username"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textAlignment="viewStart"
-        android:inputType="text"
-        android:textSize="@dimen/_14ssp"
-        android:hint="@string/user_name"
-        android:text="admin"
-        android:textColorHint="@color/black"
+        android:layout_marginStart="@dimen/_40sdp"
+        android:layout_marginTop="@dimen/_15sdp"
+        android:layout_marginEnd="@dimen/_40sdp"
+        android:padding="@dimen/_6sdp"
         android:background="@drawable/edit_text_background"
         android:backgroundTint="@color/light_grey"
-        android:padding="@dimen/_10sdp"
-        android:paddingStart="@dimen/_20sdp"
-        android:layout_marginTop="@dimen/_30sdp"
-        android:layout_marginStart="@dimen/_40sdp"
-        android:layout_marginEnd="@dimen/_40sdp"
+        android:hint="@string/user_name"
+        android:inputType="text"
         android:maxLines="1"
-        app:layout_constraintTop_toBottomOf="@id/guideline"
-        app:layout_constraintStart_toStartOf="parent"
+        android:text="admin"
+        android:textAlignment="viewStart"
+        android:textColorHint="@color/black"
+        android:textSize="@dimen/_14ssp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/et_password"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_username"
         tools:ignore="RtlSymmetry" />
+
+    <TextView
+        android:id="@+id/tv_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/_40sdp"
+        android:layout_marginTop="@dimen/_15sdp"
+        android:text="@string/password"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/et_username" />
 
     <EditText
         android:id="@+id/et_password"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textAlignment="viewStart"
-        android:inputType="textPassword"
-        android:textSize="@dimen/_14ssp"
-        android:hint="@string/password"
-        android:autofillHints="@string/password"
-        android:text="08902015"
-        android:textColorHint="@color/black"
-        android:backgroundTint="@color/light_grey"
-        android:background="@drawable/edit_text_background"
-        android:padding="@dimen/_10sdp"
-        android:paddingStart="@dimen/_20sdp"
         android:layout_marginTop="@dimen/_15sdp"
-        app:layout_constraintTop_toBottomOf="@id/et_username"
-        app:layout_constraintStart_toStartOf="@id/et_username"
+        android:autofillHints="@string/password"
+        android:background="@drawable/edit_text_background"
+        android:backgroundTint="@color/light_grey"
+        android:hint="@string/password"
+        android:inputType="textPassword"
+        android:padding="@dimen/_6sdp"
+        android:text="28939283"
+        android:textAlignment="viewStart"
+        android:textColorHint="@color/black"
+        android:textSize="@dimen/_14ssp"
         app:layout_constraintEnd_toEndOf="@id/et_username"
+        app:layout_constraintStart_toStartOf="@id/et_username"
+        app:layout_constraintTop_toBottomOf="@id/tv_password"
         tools:ignore="RtlSymmetry" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/b_login"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/enter"
-        app:backgroundTint="@color/purple"
-        android:padding="@dimen/_7sdp"
         android:layout_marginTop="@dimen/_30sdp"
         android:background="@drawable/edit_text_background"
+        android:padding="@dimen/_7sdp"
+        android:text="login"
+        app:backgroundTint="@color/purple"
         app:layout_constraintEnd_toEndOf="@id/et_username"
         app:layout_constraintStart_toStartOf="@id/et_username"
         app:layout_constraintTop_toBottomOf="@id/et_password" />
-<WebView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:layout_constraintTop_toBottomOf="@id/b_login"
-    android:id="@+id/webView"
-    android:visibility="invisible"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
