--- a/app/src/main/res/layout/activity_router_data.xml
+++ b/app/src/main/res/layout/activity_router_data.xml
@@ -1,12 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.30" />
 
-    <WebView
-        android:id="@+id/webView"
+    <TextView
+        android:id="@+id/tv_ssid"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/_40sdp"
+        android:text="SSID"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/guideline" />
+
+    <EditText
+        android:id="@+id/et_ssid"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/_40sdp"
+        android:layout_marginTop="@dimen/_15sdp"
+        android:layout_marginEnd="@dimen/_40sdp"
+        android:padding="@dimen/_6sdp"
+        android:background="@drawable/edit_text_background"
+        android:backgroundTint="@color/light_grey"
+        android:hint="@string/user_name"
+        android:inputType="text"
+        android:maxLines="1"
+        android:text="New SSID"
+        android:textAlignment="viewStart"
+        android:textColorHint="@color/black"
+        android:textSize="@dimen/_14ssp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_ssid"
+        tools:ignore="RtlSymmetry" />
+
+    <TextView
+        android:id="@+id/tv_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/_40sdp"
+        android:layout_marginTop="@dimen/_15sdp"
+        android:text="@string/password"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/et_ssid" />
+
+    <EditText
+        android:id="@+id/et_password"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_15sdp"
+        android:autofillHints="@string/password"
+        android:background="@drawable/edit_text_background"
+        android:backgroundTint="@color/light_grey"
+        android:hint="@string/password"
+        android:inputType="textPassword"
+        android:padding="@dimen/_6sdp"
+        android:text="28939283"
+        android:textAlignment="viewStart"
+        android:textColorHint="@color/black"
+        android:textSize="@dimen/_14ssp"
+        app:layout_constraintEnd_toEndOf="@id/et_ssid"
+        app:layout_constraintStart_toStartOf="@id/et_ssid"
+        app:layout_constraintTop_toBottomOf="@id/tv_password"
+        tools:ignore="RtlSymmetry" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/b_apply"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_30sdp"
+        android:background="@drawable/edit_text_background"
+        android:padding="@dimen/_7sdp"
+        android:text="apply"
+        app:backgroundTint="@color/purple"
+        app:layout_constraintEnd_toEndOf="@id/et_ssid"
+        app:layout_constraintStart_toStartOf="@id/et_ssid"
+        app:layout_constraintTop_toBottomOf="@id/et_password" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
