--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,7 +65,7 @@
         android:hint="@string/password"
         android:inputType="textPassword"
         android:padding="@dimen/_6sdp"
-        android:text="28939283"
+        android:text="K9119299"
         android:textAlignment="viewStart"
         android:textColorHint="@color/black"
         android:textSize="@dimen/_14ssp"
