--- a/app/src/main/res/layout/activity_connected_devices.xml
+++ b/app/src/main/res/layout/activity_connected_devices.xml
@@ -6,4 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".ConnectedDevicesActivity">
 
+    <TextView
+        android:id="@+id/tv_connectedDevices"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Connected Devices :"
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginBottom="@dimen/_30sdp"
+        android:layout_marginStart="@dimen/_10sdp"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_connectedDevices"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+       app:layout_constraintTop_toBottomOf="@id/tv_connectedDevices"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:listitem="@layout/connected_devices_list_item" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
