--- a/app/src/main/res/layout/activity_laninterface.xml
+++ b/app/src/main/res/layout/activity_laninterface.xml
@@ -324,7 +324,7 @@
                 android:id="@+id/cl_raSettings"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/_16sdp"
+                android:layout_marginStart="@dimen/_16sdp"
                 android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
