--- a/app/src/main/res/layout/activity_home_network.xml
+++ b/app/src/main/res/layout/activity_home_network.xml
@@ -7,16 +7,33 @@
     android:layout_height="match_parent"
     tools:context=".HomeNetworkActivity">
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Home Network"
+        android:textSize="@dimen/_16ssp"
+        android:textStyle="bold"
+        android:background="@color/light_grey"
+        android:textColor="@color/purple"
+        android:padding="@dimen/_16sdp"
+        android:gravity="center"
+        android:layout_margin="@dimen/_16sdp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
         android:id="@+id/btn_lanDevices"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/_16sdp"
+        android:layout_marginTop="2dp"
         android:text="LAN Devices"
         android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
         android:id="@+id/btn_lanInterface"
