--- a/app/src/main/res/layout/activity_maintain.xml
+++ b/app/src/main/res/layout/activity_maintain.xml
@@ -6,17 +6,32 @@
     android:layout_height="match_parent"
     tools:context=".MaintainActivity">
 
+    <TextView
+        android:id="@+id/tV_Maintain"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Maintain"
+        android:textSize="@dimen/_16ssp"
+        android:textStyle="bold"
+        android:background="@color/light_grey"
+        android:textColor="@color/purple"
+        android:padding="@dimen/_16sdp"
+        android:gravity="center"
+        android:layout_margin="@dimen/_16sdp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
         android:id="@+id/btn_sysInfo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/_16sdp"
         android:text="System information"
-
         android:textAllCaps="false"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/tV_Maintain" />
 
     <Button
         android:id="@+id/btn_wlanInfo"
