--- a/app/src/main/res/layout/activity_wlansettings.xml
+++ b/app/src/main/res/layout/activity_wlansettings.xml
@@ -35,7 +35,7 @@
             android:id="@+id/cL_basicSettings"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/_32sdp"
+            android:layout_marginStart="@dimen/_16sdp"
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -46,7 +46,6 @@
                 android:id="@+id/tV_enableWlan"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_16sdp"
                 android:text="Enable WLAN 2.4 GHz"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -59,6 +58,7 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
 
@@ -85,7 +85,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_16sdp"
-            android:layout_marginEnd="@dimen/_32sdp"
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -122,35 +121,32 @@
                 app:layout_constraintTop_toBottomOf="@+id/tV_enSSid" />
 
 
-            <EditText
-                android:id="@+id/et_ssid"
+            <TextView
+                android:id="@+id/tV_ssid"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/edit_text_background"
-                android:inputType="text"
                 android:text="WE2BA68"
                 app:layout_constraintBottom_toBottomOf="@+id/tV_SSid"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/cB_enableSSid"
                 app:layout_constraintTop_toTopOf="@+id/tV_SSid" />
 
             <CheckBox
                 android:id="@+id/cB_enableSSid"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:checked="true"
                 app:layout_constraintBottom_toBottomOf="@+id/tV_enSSid"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/tV_enSSid" />
 
-            <EditText
-                android:id="@+id/eT_maxClients"
+            <TextView
+                android:id="@+id/tV_clientsNum"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/edit_text_background"
-                android:inputType="number"
                 android:text="@string/MaxClientsNum"
-                app:layout_constraintEnd_toEndOf="@+id/cB_enableSSid"
-                app:layout_constraintStart_toStartOf="@+id/cB_enableSSid"
-                app:layout_constraintTop_toBottomOf="@+id/cB_enableSSid" />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/cB_enableSSid" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -175,8 +171,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_16sdp"
-            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
+            android:visibility="gone"
+
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tV_advancedSettings">
 
@@ -205,7 +202,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_16sdp"
                 android:text="Enable WMM (QoS) :"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tV_transmitPower" />
 
@@ -213,10 +209,10 @@
                 android:id="@+id/cB_wMM"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_16sdp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/sP_transmitPower"
-                app:layout_constraintTop_toBottomOf="@+id/sP_transmitPower" />
+                app:layout_constraintBottom_toBottomOf="@+id/tV_wMM"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/tV_wMM" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
