--- a/app/src/main/res/layout/activity_sys_information.xml
+++ b/app/src/main/res/layout/activity_sys_information.xml
@@ -99,7 +99,7 @@
 
     <TextView
         android:id="@+id/tV_time"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:paddingEnd="@dimen/_16sdp"
         app:layout_constraintBottom_toBottomOf="@+id/tV_systemTime"
