--- a/app/src/main/res/layout/activity_wlan_access.xml
+++ b/app/src/main/res/layout/activity_wlan_access.xml
@@ -36,6 +36,7 @@
         android:id="@+id/cB_WPS"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:clickable="false"
         app:layout_constraintBottom_toBottomOf="@+id/tV_wlanWPS"
         app:layout_constraintEnd_toStartOf="@+id/tV_enableWPS"
         app:layout_constraintStart_toEndOf="@+id/tV_wlanWPS"
