--- a/app/src/main/res/layout/activity_wlansettings.xml
+++ b/app/src/main/res/layout/activity_wlansettings.xml
@@ -58,6 +58,7 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                android:clickable="false"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -134,7 +135,7 @@
                 android:id="@+id/cB_enableSSid"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:checked="true"
+                android:clickable="false"
                 app:layout_constraintBottom_toBottomOf="@+id/tV_enSSid"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -209,6 +210,7 @@
                 android:id="@+id/cB_wMM"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:clickable="false"
                 app:layout_constraintBottom_toBottomOf="@+id/tV_wMM"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
