--- a/app/src/main/res/layout/activity_wlansettings.xml
+++ b/app/src/main/res/layout/activity_wlansettings.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -47,6 +46,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Enable WLAN 2.4 GHz"
+                android:textColor="@color/black"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/cB_enableWlan" />
@@ -91,14 +91,7 @@
             app:layout_constraintTop_toBottomOf="@+id/tV_wlanEncryp">
 
 
-            <TextView
-                android:id="@+id/tV_SSid"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_16sdp"
-                android:text="SSid"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+
 
 
             <TextView
@@ -107,8 +100,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_16sdp"
                 android:text="Enable SSID :"
+                android:textColor="@color/black"
+
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tV_SSid" />
+                app:layout_constraintTop_toTopOf="parent"  />
 
             <TextView
                 android:id="@+id/tV_maxClients"
@@ -116,19 +111,14 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_16sdp"
                 android:text="Maximum Clients"
+                android:textColor="@color/black"
+
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tV_enSSid" />
 
 
-            <TextView
-                android:id="@+id/tV_ssid"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="WE2BA68"
-                app:layout_constraintBottom_toBottomOf="@+id/tV_SSid"
-                app:layout_constraintStart_toStartOf="@+id/cB_enableSSid"
-                app:layout_constraintTop_toTopOf="@+id/tV_SSid" />
+
 
             <CheckBox
                 android:id="@+id/cB_enableSSid"
@@ -145,6 +135,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/MaxClientsNum"
+
+                android:textColor="@color/black"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/cB_enableSSid" />
 
@@ -171,8 +163,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_16sdp"
-            app:layout_constraintEnd_toEndOf="parent"
             android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
 
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tV_advancedSettings">
@@ -184,6 +176,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_16sdp"
                 android:text="Transmit Power (Percentage)"
+
+                android:textColor="@color/black"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -191,6 +185,8 @@
                 android:id="@+id/tv_transmitPower"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
+
                 app:layout_constraintBottom_toBottomOf="@+id/tV_transmitPower"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/tV_transmitPower"
@@ -202,6 +198,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_16sdp"
                 android:text="Enable WMM (QoS) :"
+                android:textColor="@color/black"
+
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tV_transmitPower" />
 
@@ -220,6 +218,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_16sdp"
                 android:text="11 n bandwidth :"
+                android:textColor="@color/black"
+
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tV_wMM" />
 
@@ -227,8 +227,10 @@
                 android:id="@+id/tv_11nValue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
                 app:layout_constraintBottom_toBottomOf="@+id/tV_11nbandWidth"
                 app:layout_constraintEnd_toEndOf="parent"
+
                 app:layout_constraintStart_toEndOf="@+id/tV_11nbandWidth"
                 app:layout_constraintTop_toTopOf="@+id/tV_11nbandWidth" />
 
@@ -238,6 +240,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_16sdp"
                 android:text="11n MCS:"
+
+                android:textColor="@color/black"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tV_11nbandWidth" />
 
@@ -245,16 +249,21 @@
                 android:id="@+id/tV_11nMCSValue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
+
                 app:layout_constraintBottom_toBottomOf="@+id/tV_11nMCS"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/tV_11nMCS"
                 app:layout_constraintTop_toTopOf="@+id/tV_11nMCS" />
+
             <TextView
                 android:id="@+id/tV_frequency"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_16sdp"
+
                 android:text="Frequency :"
+                android:textColor="@color/black"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tV_11nMCSValue" />
 
@@ -262,6 +271,9 @@
                 android:id="@+id/tV_frequencyValue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+
+                android:textColor="@color/black"
+
                 app:layout_constraintBottom_toBottomOf="@+id/tV_frequency"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/tV_frequency"
