using font and DD PROGRESS bar

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -11,6 +11,7 @@
     android:layout_height="wrap_content"
     app:layout_constraintTop_toTopOf="parent"
     android:text="WELCOME"
+    android:fontFamily="@font/montserrat_semi_bold"
     android:textSize="@dimen/_30sdp"
     android:layout_marginTop="@dimen/_30sdp"
     app:layout_constraintEnd_toEndOf="parent"
@@ -22,6 +23,7 @@
     android:layout_height="wrap_content"
     app:layout_constraintStart_toStartOf="parent"
     android:text="Connected Devices"
+    android:fontFamily="@font/montserrat_semi_bold"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintTop_toBottomOf="@id/tv_welcome"
     android:layout_margin="@dimen/_15sdp"
@@ -32,6 +34,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         android:text="Maintain"
+        android:fontFamily="@font/montserrat_semi_bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/bt_connectedDevices"
         android:layout_margin="@dimen/_15sdp"
@@ -42,6 +45,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         android:text="get device info"
+        android:fontFamily="@font/montserrat_semi_bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/bt_maintain"
         android:layout_margin="@dimen/_15sdp"
@@ -52,6 +56,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         android:text="home network"
+        android:fontFamily="@font/montserrat_semi_bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/bt_getDevieInfo"
         android:layout_margin="@dimen/_15sdp"
@@ -62,6 +67,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         android:text="change password"
+        android:fontFamily="@font/montserrat_semi_bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/bt_homeNetwork"
         android:layout_margin="@dimen/_15sdp"
@@ -73,6 +79,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         android:text="logout"
+        android:fontFamily="@font/montserrat_semi_bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/bt_changePassword"
         android:layout_margin="@dimen/_15sdp"
