--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    
+
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
         android:layout_width="wrap_content"
@@ -17,6 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/_40sdp"
+        android:fontFamily="@font/montserrat_medium"
         android:text="SSID"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/guideline" />
@@ -28,12 +29,12 @@
         android:layout_marginStart="@dimen/_40sdp"
         android:layout_marginTop="@dimen/_15sdp"
         android:layout_marginEnd="@dimen/_40sdp"
-        android:padding="@dimen/_6sdp"
         android:background="@drawable/edit_text_background"
         android:backgroundTint="@color/light_grey"
         android:hint="@string/user_name"
         android:inputType="text"
         android:maxLines="1"
+        android:padding="@dimen/_6sdp"
         android:text="New SSID"
         android:textAlignment="viewStart"
         android:textColorHint="@color/black"
@@ -49,7 +50,9 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/_40sdp"
         android:layout_marginTop="@dimen/_15sdp"
+        android:fontFamily="@font/montserrat_medium"
         android:text="@string/password"
+
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/et_ssid" />
 
@@ -79,6 +82,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_30sdp"
         android:background="@drawable/edit_text_background"
+        android:fontFamily="@font/montserrat_bold"
         android:padding="@dimen/_7sdp"
         android:text="apply"
         app:backgroundTint="@color/purple"
@@ -91,9 +95,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:progressTint="@color/black"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:visibility="gone" />
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
