--- a/app/src/main/res/layout/activity_connected_devices.xml
+++ b/app/src/main/res/layout/activity_connected_devices.xml
@@ -13,6 +13,7 @@
         android:text="Connected Devices :"
         android:textStyle="bold"
         android:textColor="@color/black"
+        android:fontFamily="@font/montserrat_bold"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginBottom="@dimen/_30sdp"
         android:layout_marginStart="@dimen/_10sdp"
@@ -24,7 +25,17 @@
         android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tv_connectedDevices"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:listitem="@layout/connected_devices_list_item" />
-
+        tools:listitem="@layout/connected_devices_list_item"
+        />
+    <ProgressBar
+        android:id="@+id/progress_circular"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:progressTint="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
