--- a/app/src/main/res/layout/activity_dslinformation.xml
+++ b/app/src/main/res/layout/activity_dslinformation.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/light_grey"
+        android:fontFamily="@font/montserrat_semi_bold"
         android:gravity="center"
         android:padding="@dimen/_8sdp"
         android:text="DSL Information"
@@ -26,6 +27,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_16sdp"
+        android:fontFamily="@font/montserrat_medium"
+
         android:text="DSL Synchronization status:"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tV_dslInfo" />
@@ -35,6 +38,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_16sdp"
+        android:fontFamily="@font/montserrat_medium"
+
         android:text="Connection Status:"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dslSync" />
@@ -44,6 +49,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_16sdp"
+        android:fontFamily="@font/montserrat_medium"
+
         android:text="Upstream line rate(kbit/s):"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/connectionStatus" />
@@ -53,6 +60,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_16sdp"
+        android:fontFamily="@font/montserrat_medium"
+
         android:text="Downstream line rate(kbit/s):"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/upStreamLine" />
@@ -61,8 +70,8 @@
         android:id="@+id/maxUpRate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Maximum upstream rate(kbit/s):"
         android:layout_marginTop="@dimen/_16sdp"
+        android:text="Maximum upstream rate(kbit/s):"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/downStreamLine" />
 
@@ -71,6 +80,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_16sdp"
+        android:fontFamily="@font/montserrat_medium"
+
         android:text="Maximum downstream rate(kbit/s):"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/maxUpRate" />
@@ -79,8 +90,10 @@
         android:id="@+id/upNoise"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Upstream noise safety coefficient(dB):"
         android:layout_marginTop="@dimen/_16sdp"
+
+        android:fontFamily="@font/montserrat_medium"
+        android:text="Upstream noise safety coefficient(dB):"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/maxDownRate" />
 
@@ -88,8 +101,9 @@
         android:id="@+id/downNoise"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Downstream noise safety coefficient(dB):"
         android:layout_marginTop="@dimen/_16sdp"
+        android:fontFamily="@font/montserrat_medium"
+        android:text="Downstream noise safety coefficient(dB):"
 
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/upNoise" />
@@ -98,8 +112,10 @@
         android:id="@+id/upAttenuation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Upstream line attenuation(dB):"
         android:layout_marginTop="@dimen/_16sdp"
+        android:fontFamily="@font/montserrat_medium"
+        android:text="Upstream line attenuation(dB):"
+
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/downNoise" />
 
@@ -110,14 +126,16 @@
         android:layout_marginTop="@dimen/_16sdp"
         android:text="Downstream line attenuation(dB):"
         app:layout_constraintStart_toStartOf="parent"
+        android:fontFamily="@font/montserrat_medium"
         app:layout_constraintTop_toBottomOf="@+id/upAttenuation" />
 
     <TextView
         android:id="@+id/upOutPower"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Upstream output power(dBm):"
         android:layout_marginTop="@dimen/_16sdp"
+        android:text="Upstream output power(dBm):"
+        android:fontFamily="@font/montserrat_medium"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/downAttenuation" />
 
@@ -125,8 +143,9 @@
         android:id="@+id/downOutPower"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Downstream output power(dBm):"
+        android:fontFamily="@font/montserrat_medium"
         android:layout_marginTop="@dimen/_16sdp"
+        android:text="Downstream output power(dBm):"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/upOutPower" />
 
@@ -136,6 +155,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_16sdp"
         android:text="DSL up time:"
+        android:fontFamily="@font/montserrat_medium"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/downOutPower" />
 
@@ -144,6 +164,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="NoSignal"
+        android:fontFamily="@font/montserrat_medium"
         app:layout_constraintBottom_toBottomOf="@+id/dslSync"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -152,6 +173,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="IdIe"
+        android:fontFamily="@font/montserrat_medium"
         app:layout_constraintBottom_toBottomOf="@+id/connectionStatus"
         app:layout_constraintStart_toStartOf="@+id/tV_dslSync" />
 
@@ -160,6 +182,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0"
+        android:fontFamily="@font/montserrat_medium"
         app:layout_constraintBottom_toBottomOf="@+id/upStreamLine"
         app:layout_constraintStart_toStartOf="@+id/tV_connectionStatus" />
 
@@ -168,6 +191,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0"
+        android:fontFamily="@font/montserrat_medium"
         app:layout_constraintBottom_toBottomOf="@+id/downStreamLine"
         app:layout_constraintStart_toStartOf="@+id/tV_upStreamLine" />
 
@@ -176,6 +200,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0"
+        android:fontFamily="@font/montserrat_medium"
         app:layout_constraintBottom_toBottomOf="@+id/maxUpRate"
         app:layout_constraintStart_toStartOf="@+id/tV_DownStreamLine" />
 
@@ -184,6 +209,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0"
+        android:fontFamily="@font/montserrat_medium"
         app:layout_constraintBottom_toBottomOf="@+id/maxDownRate"
         app:layout_constraintStart_toStartOf="@+id/tV_maxUpRate" />
 
@@ -192,6 +218,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0"
+        android:fontFamily="@font/montserrat_medium"
         app:layout_constraintBottom_toBottomOf="@+id/upNoise"
         app:layout_constraintStart_toStartOf="@+id/tV_maxDownRate" />
 
@@ -200,6 +227,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0"
+        android:fontFamily="@font/montserrat_medium"
         app:layout_constraintBottom_toBottomOf="@+id/downNoise"
         app:layout_constraintStart_toStartOf="@+id/tV_upNoise" />
 
@@ -208,6 +236,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0"
+        android:fontFamily="@font/montserrat_medium"
         app:layout_constraintBottom_toBottomOf="@+id/upAttenuation"
         app:layout_constraintStart_toStartOf="@+id/tV_downNoise" />
 
@@ -216,6 +245,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0"
+        android:fontFamily="@font/montserrat_medium"
         app:layout_constraintBottom_toBottomOf="@+id/downAttenuation"
         app:layout_constraintStart_toStartOf="@+id/tV_upAttenuation" />
 
@@ -224,6 +254,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0"
+        android:fontFamily="@font/montserrat_medium"
         app:layout_constraintBottom_toBottomOf="@+id/upOutPower"
         app:layout_constraintStart_toStartOf="@+id/tV_downAttenuation" />
 
@@ -232,6 +263,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0"
+        android:fontFamily="@font/montserrat_medium"
         app:layout_constraintBottom_toBottomOf="@+id/downOutPower"
         app:layout_constraintStart_toStartOf="@+id/tV_upOutPower" />
 
@@ -240,7 +272,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0"
+        android:fontFamily="@font/montserrat_medium"
         app:layout_constraintBottom_toBottomOf="@+id/dslUpTime"
         app:layout_constraintStart_toStartOf="@+id/tV_downOutPower" />
+    <ProgressBar
+        android:id="@+id/progress_circular"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:progressTint="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
