--- a/app/src/main/res/layout/activity_features.xml
+++ b/app/src/main/res/layout/activity_features.xml
@@ -20,6 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/_20sdp"
         android:text="WiFi Settings"
+        android:fontFamily="@font/montserrat_bold"
         app:backgroundTint="@color/purple"
         android:padding="@dimen/_7sdp"
         android:layout_marginTop="@dimen/_30sdp"
