--- a/app/src/main/res/layout/activity_laninterface.xml
+++ b/app/src/main/res/layout/activity_laninterface.xml
@@ -6,7 +6,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".LANInterfaceActivity">
-
+    <ProgressBar
+        android:id="@+id/progress_circular"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:indeterminate="true" />
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -24,7 +28,7 @@
                 android:clickable="true"
                 android:focusable="true"
                 android:padding="@dimen/_8sdp"
-
+                android:fontFamily="@font/montserrat_medium"
                 android:text="LAN Interface Status"
                 android:textColor="@color/purple"
                 android:textStyle="bold"
@@ -95,7 +99,7 @@
                 android:clickable="true"
                 android:focusable="true"
                 android:padding="@dimen/_8sdp"
-
+                android:fontFamily="@font/montserrat_medium"
                 android:text="LAN Interface Settings"
                 android:textColor="@color/purple"
                 android:textStyle="bold"
@@ -109,6 +113,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_16sdp"
                 app:layout_constraintEnd_toEndOf="parent"
+                android:fontFamily="@font/montserrat_medium"
                 android:visibility="gone"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tV_lanSettings">
@@ -119,6 +124,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_8sdp"
                     android:text="IP address"
+                    android:fontFamily="@font/montserrat_medium"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -127,7 +133,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_8sdp"
-
+                    android:fontFamily="@font/montserrat_medium"
                     android:text="Server subnet mask:"
                     app:layout_constraintStart_toStartOf="@+id/tV_ipAddress1"
                     app:layout_constraintTop_toBottomOf="@+id/tV_ipAddress1" />
@@ -139,6 +145,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_8sdp"
                     android:text="Secondary LAN"
+                    android:fontFamily="@font/montserrat_medium"
                     app:layout_constraintBottom_toBottomOf="@+id/cB_secLAN"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tV_subnetMask" />
@@ -148,6 +155,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Device NAme"
+                    android:fontFamily="@font/montserrat_medium"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/tV_secondaryLan" />
 
@@ -156,6 +164,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_8sdp"
+                    android:fontFamily="@font/montserrat_medium"
                     app:layout_constraintBottom_toBottomOf="@+id/tV_ipAddress1"
                     app:layout_constraintStart_toStartOf="@+id/tV_subnetMaskNum"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -165,6 +174,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_8sdp"
+                    android:fontFamily="@font/montserrat_medium"
                     app:layout_constraintBottom_toBottomOf="@+id/tV_subnetMask"
                     app:layout_constraintStart_toStartOf="@+id/cB_secLAN"
                     app:layout_constraintTop_toTopOf="@+id/tV_subnetMask" />
@@ -174,6 +184,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:clickable="false"
+                    android:fontFamily="@font/montserrat_medium"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tV_subnetMaskNum" />
@@ -183,7 +194,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_8sdp"
-
+                    android:fontFamily="@font/montserrat_medium"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/cB_secLAN"
                     app:layout_constraintTop_toBottomOf="@+id/cB_secLAN" />
@@ -200,6 +211,7 @@
                 android:focusable="true"
                 android:padding="@dimen/_8sdp"
                 android:text="DHCP Server"
+                android:fontFamily="@font/montserrat_medium"
                 android:textColor="@color/purple"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -212,6 +224,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/_16sdp"
                 android:visibility="gone"
+                android:fontFamily="@font/montserrat_medium"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tV_dhcbServer">
@@ -222,6 +235,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_8sdp"
                     android:text="DHCP Server:"
+                    android:fontFamily="@font/montserrat_medium"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -231,6 +245,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_8sdp"
                     android:text="Start IP address:"
+                    android:fontFamily="@font/montserrat_medium"
                     app:layout_constraintStart_toStartOf="@+id/tV_enableDHCB"
                     app:layout_constraintTop_toBottomOf="@+id/tV_enableDHCB" />
 
@@ -240,6 +255,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_8sdp"
+                    android:fontFamily="@font/montserrat_medium"
                     android:text="End IP address"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tV_startIP" />
@@ -249,6 +265,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="DNS Mode"
+                    android:fontFamily="@font/montserrat_medium"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tV_endIP" />
@@ -270,6 +287,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_8sdp"
+                    android:fontFamily="@font/montserrat_medium"
                     app:layout_constraintBottom_toBottomOf="@+id/tV_startIP"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -280,6 +298,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_8sdp"
+                    android:fontFamily="@font/montserrat_medium"
                     app:layout_constraintBottom_toBottomOf="@+id/tV_endIP"
                     app:layout_constraintStart_toStartOf="@+id/tV_minIP"
                     app:layout_constraintTop_toTopOf="@+id/tV_endIP" />
@@ -290,6 +309,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_8sdp"
                     android:clickable="false"
+                    android:fontFamily="@font/montserrat_medium"
                     android:text="CPE acts as the DNS Proxy"
                     app:layout_constraintBottom_toBottomOf="@+id/tV_dnsMode"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -307,6 +327,7 @@
                 android:clickable="true"
                 android:focusable="true"
                 android:padding="@dimen/_8sdp"
+                android:fontFamily="@font/montserrat_medium"
                 android:text="RA Settings"
                 android:textColor="@color/purple"
                 android:textStyle="bold"
@@ -330,6 +351,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_8sdp"
                     android:text="Enable RA:"
+                    android:fontFamily="@font/montserrat_medium"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -356,6 +378,7 @@
                 android:clickable="true"
                 android:focusable="true"
                 android:padding="@dimen/_8sdp"
+                android:fontFamily="@font/montserrat_medium"
                 android:text="IPV6 DHCP Server"
                 android:textColor="@color/purple"
                 android:textStyle="bold"
@@ -376,6 +399,7 @@
                     android:id="@+id/tV_enableIPV6"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:fontFamily="@font/montserrat_medium"
                     android:text="IPV6 DHCP Server:"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -402,6 +426,7 @@
                 android:background="@color/light_grey"
                 android:focusable="true"
                 android:padding="@dimen/_8sdp"
+                android:fontFamily="@font/montserrat_medium"
                 android:text="UPnP"
                 android:textColor="@color/purple"
                 android:textStyle="bold"
@@ -424,6 +449,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_8sdp"
+                    android:fontFamily="@font/montserrat_medium"
                     android:text="Enable UPnP:"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -452,6 +478,7 @@
                 android:focusable="true"
                 android:padding="@dimen/_8sdp"
                 android:text="TR064"
+                android:fontFamily="@font/montserrat_medium"
                 android:textColor="@color/purple"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -476,6 +503,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_8sdp"
+                    android:fontFamily="@font/montserrat_medium"
                     android:text="Enable TR064:"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
