--- a/app/src/main/res/layout/activity_wlan_access.xml
+++ b/app/src/main/res/layout/activity_wlan_access.xml
@@ -16,6 +16,7 @@
         android:gravity="center"
         android:padding="@dimen/_8sdp"
         android:text="WLAN Access"
+        android:fontFamily="@font/montserrat_bold"
         android:textColor="@color/purple"
         android:textSize="@dimen/_16ssp"
         android:textStyle="bold"
@@ -28,6 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_24sdp"
+        android:fontFamily="@font/montserrat_medium"
         android:text="WLAN WPS"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tV_wlanAccess" />
@@ -47,9 +49,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Enable WPS"
+        android:fontFamily="@font/montserrat_medium"
         app:layout_constraintBottom_toBottomOf="@+id/cB_WPS"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tV_wlanWPS"
         app:layout_constraintTop_toTopOf="@+id/cB_WPS" />
-
+    <ProgressBar
+        android:id="@+id/progress_circular"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:progressTint="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="visible" />
 </androidx.constraintlayout.widget.ConstraintLayout>
