--- a/app/src/main/res/layout/activity_wlaninfo.xml
+++ b/app/src/main/res/layout/activity_wlaninfo.xml
@@ -15,6 +15,7 @@
         android:gravity="center"
         android:padding="@dimen/_8sdp"
         android:text="WLAN Information"
+        android:fontFamily="@font/montserrat_bold"
         android:textColor="@color/purple"
         android:textSize="@dimen/_16ssp"
         android:textStyle="bold"
@@ -27,6 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_24sdp"
+        android:fontFamily="@font/montserrat_medium"
         android:text="SSID:"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tV_wlanInfo" />
@@ -36,6 +38,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_24sdp"
+        android:fontFamily="@font/montserrat_medium"
         android:text="ON/OF:"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tV_SSid" />
@@ -45,6 +48,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_24sdp"
+        android:fontFamily="@font/montserrat_medium"
         android:text="MAC Address:"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tV_onOF" />
@@ -54,6 +58,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_24sdp"
+        android:fontFamily="@font/montserrat_medium"
         android:text="Channel:"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tV_macAddress" />
@@ -63,6 +68,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_24sdp"
+        android:fontFamily="@font/montserrat_medium"
         android:text="Transmit Power (Percentage):"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_channel" />
@@ -72,6 +78,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_24sdp"
+        android:fontFamily="@font/montserrat_medium"
         android:text="Region:"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_transmitPower" />
@@ -80,6 +87,7 @@
         android:id="@+id/tV_ssidNam"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/montserrat_medium"
         app:layout_constraintBottom_toBottomOf="@+id/tV_SSid"
         app:layout_constraintStart_toStartOf="@+id/tv_macNum" />
 
@@ -87,6 +95,7 @@
         android:id="@+id/tV_on"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/montserrat_medium"
         android:text="OFF"
         app:layout_constraintBottom_toBottomOf="@+id/tV_onOF"
         app:layout_constraintStart_toStartOf="@+id/tv_macNum" />
@@ -95,11 +104,13 @@
         android:id="@+id/tv_macNum"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/montserrat_medium"
         app:layout_constraintBottom_toBottomOf="@+id/tV_macAddress"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/tv_channelNum"
+        android:fontFamily="@font/montserrat_medium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="@+id/tv_channel"
@@ -107,6 +118,7 @@
 
     <TextView
         android:id="@+id/tV_transmitNum"
+        android:fontFamily="@font/montserrat_medium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="@+id/tv_transmitPower"
@@ -115,10 +127,20 @@
 
     <TextView
         android:id="@+id/tV_regionName"
+        android:fontFamily="@font/montserrat_medium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="@+id/tV_region"
         app:layout_constraintStart_toStartOf="@+id/tv_macNum" />
 
-
+    <ProgressBar
+        android:id="@+id/progress_circular"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:progressTint="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="visible" />
 </androidx.constraintlayout.widget.ConstraintLayout>
