--- a/app/src/main/res/layout/activity_wlansettings.xml
+++ b/app/src/main/res/layout/activity_wlansettings.xml
@@ -7,7 +7,11 @@
     android:background="@color/white"
     android:orientation="horizontal"
     tools:context=".WLANSettingsActivity">
-
+    <ProgressBar
+        android:id="@+id/progress_circular"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:indeterminate="true" />
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cL_Parent"
         android:layout_width="match_parent"
@@ -24,6 +28,7 @@
             android:focusable="true"
             android:padding="@dimen/_8sdp"
             android:text="Basic Settings"
+            android:fontFamily="@font/montserrat_semi_bold"
             android:textColor="@color/purple"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -45,6 +50,7 @@
                 android:id="@+id/tV_enableWlan"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/montserrat_medium"
                 android:text="Enable WLAN 2.4 GHz"
                 android:textColor="@color/black"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -75,6 +81,7 @@
             android:focusable="true"
             android:padding="@dimen/_8sdp"
             android:text="WLAN Encryption"
+            android:fontFamily="@font/montserrat_semi_bold"
             android:textColor="@color/purple"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -102,7 +109,7 @@
                 android:layout_marginTop="@dimen/_16sdp"
                 android:text="Enable SSID :"
                 android:textColor="@color/black"
-
+                android:fontFamily="@font/montserrat_medium"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"  />
 
@@ -113,7 +120,7 @@
                 android:layout_marginTop="@dimen/_16sdp"
                 android:text="Maximum Clients"
                 android:textColor="@color/black"
-
+                android:fontFamily="@font/montserrat_medium"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tV_enSSid" />
@@ -136,7 +143,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/MaxClientsNum"
-
+                android:fontFamily="@font/montserrat_medium"
                 android:textColor="@color/black"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/cB_enableSSid" />
@@ -152,6 +159,7 @@
             android:clickable="true"
             android:focusable="true"
             android:padding="@dimen/_8sdp"
+            android:fontFamily="@font/montserrat_semi_bold"
             android:text="Advanced Settings"
             android:textColor="@color/purple"
             android:textStyle="bold"
@@ -177,7 +185,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_16sdp"
                 android:text="Transmit Power (Percentage)"
-
+                android:fontFamily="@font/montserrat_medium"
                 android:textColor="@color/black"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -187,7 +195,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
-
+                android:fontFamily="@font/montserrat_medium"
                 app:layout_constraintBottom_toBottomOf="@+id/tV_transmitPower"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/tV_transmitPower"
@@ -198,6 +206,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_16sdp"
+                android:fontFamily="@font/montserrat_medium"
                 android:text="Enable WMM (QoS) :"
                 android:textColor="@color/black"
 
@@ -221,7 +230,7 @@
                 android:layout_marginTop="@dimen/_16sdp"
                 android:text="11 n bandwidth :"
                 android:textColor="@color/black"
-
+                android:fontFamily="@font/montserrat_medium"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tV_wMM" />
 
@@ -232,7 +241,7 @@
                 android:textColor="@color/black"
                 app:layout_constraintBottom_toBottomOf="@+id/tV_11nbandWidth"
                 app:layout_constraintEnd_toEndOf="parent"
-
+                android:fontFamily="@font/montserrat_medium"
                 app:layout_constraintStart_toEndOf="@+id/tV_11nbandWidth"
                 app:layout_constraintTop_toTopOf="@+id/tV_11nbandWidth" />
 
@@ -242,7 +251,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_16sdp"
                 android:text="11n MCS:"
-
+                android:fontFamily="@font/montserrat_medium"
                 android:textColor="@color/black"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tV_11nbandWidth" />
@@ -252,7 +261,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
-
+                android:fontFamily="@font/montserrat_medium"
                 app:layout_constraintBottom_toBottomOf="@+id/tV_11nMCS"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/tV_11nMCS"
@@ -263,7 +272,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_16sdp"
-
+                android:fontFamily="@font/montserrat_medium"
                 android:text="Frequency :"
                 android:textColor="@color/black"
                 app:layout_constraintStart_toStartOf="parent"
@@ -273,7 +282,7 @@
                 android:id="@+id/tV_frequencyValue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
+                android:fontFamily="@font/montserrat_medium"
                 android:textColor="@color/black"
 
                 app:layout_constraintBottom_toBottomOf="@+id/tV_frequency"
